--- a/css/style.css
+++ b/css/style.css
@@ -169,10 +169,8 @@ a:hover {
   padding: 8px 13px;
   background: none;
   border-width: 0 2px 0 1px;
-  border-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAABCAQAAABTNcdGAAAADUlEQVQIHWP4r8YABgAJCwEmqyi5lgAAAABJRU5ErkJggg%3D%3D")
-    0 2 0 1;
-  -webkit-border-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAABCAQAAABTNcdGAAAADUlEQVQIHWP4r8YABgAJCwEmqyi5lgAAAABJRU5ErkJggg%3D%3D")
-    0 2 0 1;
+  border-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAABCAQAAABTNcdGAAAADUlEQVQIHWP4r8YABgAJCwEmqyi5lgAAAABJRU5ErkJggg%3D%3D") 0 2 0 1;
+  -webkit-border-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAABCAQAAABTNcdGAAAADUlEQVQIHWP4r8YABgAJCwEmqyi5lgAAAABJRU5ErkJggg%3D%3D") 0 2 0 1;
   box-sizing: content-box;
 }
 
@@ -186,8 +184,7 @@ a:hover {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 12px;
   border: 0 none;
-  box-shadow: rgba(0, 0, 0, 0.6) 0 2px 1px inset,
-    rgba(255, 255, 255, 0.2) 0 1px 0;
+  box-shadow: rgba(0, 0, 0, 0.6) 0 2px 1px inset, rgba(255, 255, 255, 0.2) 0 1px 0;
 }
 
 #search-label {
